--- a/User Profile/User Profile.html
+++ b/User Profile/User Profile.html
@@ -78,7 +78,7 @@
 						<div class="user-profile__image"></div>
 
 						<div class="user-profile__info">
-							<h2 class="fullname">Daisy Johnson</h2>
+							<h2 class="user-profile__info__fullname">Daisy Johnson</h2>
 							<ul class="user-profile__info__detail-list">
 								<li class="user-profile__info__detail-item">1 Blog</li>
 								<li class="user-profile__info__detail-item">
